# coords

./: .gitignore  API.md  CHANGELOG.json  CLIENTS.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  TODO.txt  flake.nix
.cargo/: config.toml
.tangled/workflows/: android.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
apple/: app-store-description.txt  build-rust-dev.sh  encryption-documentation.typ
apple/Transponder/: README.md
apple/Transponder/Coords.icon/: icon.json
apple/Transponder/Transponder/: BackgroundSyncManager.swift  CityDatabase.swift  ContentView.swift  FriendsView.swift  IdentityStore.swift  Info.plist  LicensesView.swift  LocationManager.swift  LocationSyncService.swift  MainView.swift  OnboardingView.swift  PrivacyInfo.xcprivacy  SheetState.swift  TransponderApp.swift  transponder_core.swift
apple/Transponder/Transponder.xcodeproj/: project.pbxproj
core/: Cargo.toml  about.toml  generate-licenses.sh  licenses.json
core/geo/: cities.json  preprocess_cities.py  update_cities.sh
core/src/: cities.json  lib.rs
deploy/coord.is/: configuration.nix
deploy/coord.is/secrets/: cf-api-token.age  secrets.nix
server/: Cargo.toml
server/src/: lib.rs  main.rs  privacy.html  server.rs
server/tests/: integration.rs
website/: astro.config.mjs  package-lock.json  package.json
website/scripts/: generate-hero.js
website/src/components/: Hero.astro
website/src/styles/: global.css
(+71 files in other folders)
