[package]
name = "coords-server"
version = "2026.1.6"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
base64 = "0.22.1"
dashmap = "6.1.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rand = "0.8"
